--- a/05_codelab1_json.ipynb
+++ b/05_codelab1_json.ipynb
@@ -6,7 +6,6 @@
       "name": "05_codelab1_json.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "interpreter": {
@@ -29,7 +28,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cybermin/2021_PNUAC_AIData/blob/main/05_codelab1_json.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nnnlog/2021_PNUAC_AIData/blob/main/05_codelab1_json.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -74,7 +73,7 @@
       "source": [
         "import json"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -157,7 +156,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uKg5Uryimee7",
-        "outputId": "1cc90e01-9df8-4576-a822-d931b16d2279"
+        "outputId": "561b4058-e514-4df8-c5d0-235a6f19a9ea"
       },
       "source": [
         "jdata = {\n",
@@ -175,7 +174,7 @@
         "}\n",
         "print(type(jdata))"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,13 +193,13 @@
           "height": 35
         },
         "id": "fsfQxHfQs3ST",
-        "outputId": "dec11db6-9edc-45c6-b2c7-5481c5e6e80b"
+        "outputId": "40c60443-ee36-46ad-f901-3f061117fdb3"
       },
       "source": [
         "#딕션너리에서 긍정의 값을 추출\n",
-        " "
+        "jdata['return_object']['label']"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,7 +214,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 3
         }
       ]
     },
@@ -226,15 +225,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1PGydmbbkD-a",
-        "outputId": "94b88477-b758-4f36-9c7f-412e4173ec7f"
+        "outputId": "f4d547c7-9c93-4307-dea6-b507bc5e5edd"
       },
       "source": [
         "#딕션너리를 json형식의 문자열로 변환1\n",
-        " \n",
+        "jsonStr = json.dumps(jdata)\n",
         "print(jsonStr)\n",
         "print(type(jsonStr))"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,14 +252,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bk2Ybf7Bm3UQ",
-        "outputId": "bddf8894-db6b-44a5-d031-4430e003adbb"
+        "outputId": "b008e40f-e4a8-4a56-ec94-3834d27dbbcd"
       },
       "source": [
         "#딕션너리를 json형식의 문자열로 변환2\n",
+        "jsonStr1 = json.dumps(jdata, indent='\\t')\n",
         "print(jsonStr1)\n",
         "print(type(jsonStr1))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -291,14 +291,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fk_y1m9om7-C",
-        "outputId": "7e3fd315-cf28-4f5b-c4d3-d574a3efb9db"
+        "outputId": "04333125-8a0b-44b7-ecf6-3f251e79020b"
       },
       "source": [
         "#딕션너리를 json형식의 문자열로 변환3\n",
+        "jsonStr2 = json.dumps(jdata, indent='\\t', ensure_ascii=False)\n",
         "print(jsonStr2)\n",
         "print(type(jsonStr2))"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -327,15 +328,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 169
+          "height": 162
         },
         "id": "39XFflaZx6c_",
-        "outputId": "764b226f-3b89-41f4-c3f2-bc233d0f475f"
+        "outputId": "d4c6fe36-b6d5-411f-e59d-06d4e159b174"
       },
       "source": [
         "jsonStr2['return_object']"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "error",
@@ -344,7 +345,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-34-be55398ce88e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjsonStr2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'return_object'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-12-be55398ce88e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjsonStr2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'return_object'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
           ]
         }
@@ -355,31 +356,27 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 179
         },
         "id": "Tf3V9pZQw1AW",
-        "outputId": "61cf7581-d48a-4c9b-8fca-cbb226f206e9"
+        "outputId": "7ec528b5-45e7-47cb-e36d-53aa30753626"
       },
       "source": [
         "jsonStr2 = jsonStr2.replace('\\t', '').replace('\\n', '')\n",
         "jsonStr2 "
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "'{\"request_id\": \"0\",\"return_type\": \"omAnalysis\",\"result\": 0,\"reason\": \"\",\"return_object\": {\"query\": \"한국의 가을은 매우 아름답습니다.\",\"type\": \"감성분석\",\"score\": 0.9999995231628418,\"label\": \"긍정\"},\"result_code\": \"success\"}'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 35
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-08a4eb09b4c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjsonStr2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjsonStr2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\t'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mjsonStr2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'replace'"
+          ]
         }
       ]
     },
@@ -390,13 +387,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cyde_jlexBHw",
-        "outputId": "fe723c8f-1a8c-4212-f8ce-d74d12ee4d85"
+        "outputId": "57c8d883-86d1-444c-970c-f1c082a1eaf5"
       },
       "source": [
         "jsonStr2 = jsonStr2 .split(',')\n",
         "jsonStr2"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,7 +413,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 19
         }
       ]
     },
@@ -443,18 +440,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X7tCVVMxyVD3",
-        "outputId": "47fa29c3-cb49-4adb-ea28-9e50ac22f156"
+        "outputId": "a1cf46fc-20d2-4125-9b3c-96efd0ae86eb"
       },
       "source": [
         "#json형식의 문자열을 딕션너리로 변환\n",
+        "print(jsonStr2)\n",
+        "j2 = json.loads(jsonStr2)\n",
         "print(j2)\n",
         "print(type(j2))"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "{\n",
+            "\t\"request_id\": \"0\",\n",
+            "\t\"return_type\": \"omAnalysis\",\n",
+            "\t\"result\": 0,\n",
+            "\t\"reason\": \"\",\n",
+            "\t\"return_object\": {\n",
+            "\t\t\"query\": \"한국의 가을은 매우 아름답습니다.\",\n",
+            "\t\t\"type\": \"감성분석\",\n",
+            "\t\t\"score\": 0.9999995231628418,\n",
+            "\t\t\"label\": \"긍정\"\n",
+            "\t},\n",
+            "\t\"result_code\": \"success\"\n",
+            "}\n",
             "{'request_id': '0', 'return_type': 'omAnalysis', 'result': 0, 'reason': '', 'return_object': {'query': '한국의 가을은 매우 아름답습니다.', 'type': '감성분석', 'score': 0.9999995231628418, 'label': '긍정'}, 'result_code': 'success'}\n",
             "<class 'dict'>\n"
           ],
@@ -470,12 +482,12 @@
           "height": 35
         },
         "id": "ch52DpysyrrR",
-        "outputId": "000c801e-6776-4e5a-c5e6-7badf3d42260"
+        "outputId": "44ade20f-7325-470a-fed6-2e75bc3a060b"
       },
       "source": [
         "j2['return_object']['label']"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -490,7 +502,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 25
         }
       ]
     },
@@ -525,16 +537,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uNyTWhDKnt4a",
-        "outputId": "f4a4306e-e2ca-413d-8a50-81acca3f6e08"
+        "outputId": "1fed33fe-6881-448c-f6ed-67868c591265"
       },
       "source": [
         "#data.json 파일을 읽어서 딕션너리로 가져오기\n",
-        "\n",
+        "with open('/content/drive/MyDrive/PNU AI/git/data/data.json', 'r') as fp:\n",
+        "  ljson = json.load(fp)\n",
         "print(type(ljson))\n",
         "print(ljson)\n",
         "print(ljson.keys())"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,6 +555,30 @@
             "<class 'dict'>\n",
             "{'request_id': '0', 'return_type': 'omAnalysis', 'result': 0, 'reason': '', 'return_object': {'query': '한국의 가을은 매우 아름답습니다.', 'type': '감성분석', 'score': 0.9999995231628418, 'label': '긍정'}, 'result_code': 'success'}\n",
             "dict_keys(['request_id', 'return_type', 'result', 'reason', 'return_object', 'result_code'])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iXkIZjBuSgZG",
+        "outputId": "c13b6e4a-b360-451b-e6da-f1b0eff88238",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
