--- a/06_codelab2_urllib.ipynb
+++ b/06_codelab2_urllib.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "06_codelab2_urllib.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "interpreter": {
@@ -28,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cybermin/2021_PNUAC_AIData/blob/main/06_codelab2_urllib.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nnnlog/2021_PNUAC_AIData/blob/main/06_codelab2_urllib.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -94,7 +93,7 @@
         "from urllib.request import Request, urlopen\n",
         "import json  "
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -125,7 +124,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -135,15 +134,15 @@
       },
       "source": [
         "# 요청 객체 생성\n",
-        " \n",
+        "req = Request(url, headers=headers)\n",
         "\n",
         "# 전달 데이터 json 형태로 만들기\n",
-        " \n",
+        "jdata = json.dumps(rqData).encode('utf-8')\n",
         "\n",
         "#요청\n",
-        " "
+        "response = urlopen(req, jdata)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -153,24 +152,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5hd-rKdlB3om",
-        "outputId": "468a880b-1b63-4d6f-bfb8-ea56020eb392"
+        "outputId": "6acb50c6-0d24-460f-c1c7-6300a734d008"
       },
       "source": [
         "response "
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<http.client.HTTPResponse at 0x7fcc1f9e6350>"
+              "<http.client.HTTPResponse at 0x7ff8dc3bf350>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
         }
       ]
     },
@@ -181,24 +180,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zCger518B_Gq",
-        "outputId": "c910096e-2a8b-40e9-815b-5384919541a9"
+        "outputId": "523b1e7e-1ac9-4f86-bd63-10e030c6986b"
       },
       "source": [
         "response.read()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "b'{\"query\": \"\\xed\\x8c\\x8c\\xec\\x9d\\xb4\\xec\\x8d\\xac\\xec\\x9d\\x80 \\xec\\x9e\\xac\\xeb\\xaf\\xb8\\xec\\x9e\\x88\\xec\\x96\\xb4\\xec\\x9a\\x94.\", \"type\": \"\\xea\\xb0\\x90\\xec\\xa0\\x95\\xeb\\xb6\\x84\\xec\\x84\\x9d\", \"Result\": [[0.9589413404464722, \"\\xec\\x8b\\xa0\\xeb\\xa2\\xb0\"]]}'"
+              "b''"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 8
         }
       ]
     },
@@ -209,15 +208,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s2Y8kzyvE4jk",
-        "outputId": "76d3eca9-0c30-40ae-dbcd-ccdcb3d4fd77"
+        "outputId": "0c44f00f-a7b2-4884-dbbf-15f43aa73b46"
       },
       "source": [
         "# 요청에 대한 응답처리\n",
-        " \n",
+        "resp = response.read().decode('utf-8')\n",
         "print(resp)\n",
         "print(type(resp))"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,31 +302,77 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "haghdgz-Hu4f"
+      },
+      "source": [
+        "def AICloud(msg):\n",
+        "  url = \"http://svc.saltlux.ai:31781\"\n",
+        "  headers={\"Content-Type\":\"application/json\" } \n",
+        "  apiKey = \"c25ba39e-8375-4c85-a9ed-dd0a27a3972f\"\n",
+        "  rqData = {\n",
+        "      \"key\": apiKey,\n",
+        "      \"serviceId\": \"11987300804\",\n",
+        "      \"argument\": {\n",
+        "          \"type\": \"1\",\n",
+        "          \"query\": msg\n",
+        "      }\n",
+        "  }\n",
+        "  req = Request(url, headers=headers)\n",
+        "  jdata = json.dumps(rqData).encode('utf-8')\n",
+        "  response = urlopen(req, jdata)\n",
+        "  resp = json.loads(response.read().decode(\"utf-8\"))\n",
+        "  return resp['Result'][0]\n",
+        "\n"
+      ],
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lc6Ln6sGr1pn",
+        "outputId": "13fb457c-bcdb-4f67-945d-bc744fabb361",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "haghdgz-Hu4f",
-        "outputId": "26b8c20b-bc57-4e07-e845-cc41577f18c6"
+        }
+      },
+      "source": [
+        "dtmsg = {'기쁨':'와우 기뻐요', \n",
+        "     '신뢰':'당신의 말에 신뢰합니다.', \n",
+        "     '공포':'무서워요', \n",
+        "     '놀라움':'헉!', \n",
+        "     '슬픔':'ㅠㅠ', \n",
+        "     '혐오':'혐오스러워요', \n",
+        "     '분노':'화나요', \n",
+        "     '기대':'기대되요'}\n",
+        "while True:\n",
+        "  chat = input(\"[메세지입력]\")\n",
+        "  if (chat.find(\"그만\") > -1 or chat.find(\"종료\") > -1): break\n",
+        "  print(f'[대답]{dtmsg[AICloud(chat)[1]]}')"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[메세지입력]asdf\n",
+            "[대답]와우 기뻐요\n",
+            "[메세지입력]종료\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wniim4Tysk9G"
       },
       "source": [
         ""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[메시지입력]여성이 나이 들수록 코 많이 고는 이유는?\n",
-            "[대답] 잘 모르겠어요...\n",
-            "[메시지입력]배가 고파요\n",
-            "[대답] 잘 모르겠어요...\n",
-            "[메시지입력]당신은 너무 이뻐요\n",
-            "[대답]당신의 말에 신뢰합니다.\n",
-            "[메시지입력]종료할래요\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
