--- a/07_codelab3_bs.ipynb
+++ b/07_codelab3_bs.ipynb
@@ -27,7 +27,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cybermin/2021_PNUAC_AIData/blob/main/07_codelab3_bs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/nnnlog/2021_PNUAC_AIData/blob/main/07_codelab3_bs.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -101,20 +101,22 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 52
         },
         "id": "qSqcLjpt0NZH",
-        "outputId": "7a3e4269-bf93-43c5-fb6f-e073a184c62a"
+        "outputId": "af23a6ce-cf3a-4b5b-83cf-a4de416cff56"
       },
       "source": [
         "#모듈 import \n",
+        "from urllib.request import urlopen\n",
         "\n",
         "url = 'https://news.daum.net/ranking/popular'\n",
         "#웹 페이지 가져오기 \n",
+        "webpage = urlopen(url).read().decode(\"utf-8\")\n",
         "\n",
         "webpage[:200]"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,11 +181,12 @@
       },
       "source": [
         "#모듈 import \n",
+        "from bs4 import BeautifulSoup as bs\n",
         "\n",
         "#DOM 문서 만들기\n",
-        " "
+        "html = bs(webpage, 'html.parser')"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -193,12 +196,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NqqduTmfu_y1",
-        "outputId": "2199780c-a400-4298-962e-99a18213e7f5"
+        "outputId": "bcdb97a7-bce9-41b5-d707-58c1dd50dc30"
       },
       "source": [
         "type(html)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -270,15 +273,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CU0NvcF06bOt",
-        "outputId": "cadebaa1-09fa-4caf-b0ee-fc96d3669130"
+        "outputId": "6849de1a-caff-43fa-b4d3-cca7da454f02"
       },
       "source": [
         "#자료 추출하기\n",
-        "\n",
+        "lis = html.select(\"#mArticle > div.rank_news > ul.list_news2 > li\")\n",
         "print(type(lis), ' 요소 수 : ', len(lis))\n",
         "print(lis[0])"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,17 +296,17 @@
             "</span>\n",
             "</span>\n",
             "</div>\n",
-            "<a class=\"link_thumb\" href=\"https://v.daum.net/v/20210615200619216\">\n",
-            "<img alt='이준석, 접종 모습도 화제.. 상의 탈의하며 \"국민에게 불쾌감 줘 민망\"' aria-hidden=\"true\" class=\"thumb_g\" src=\"https://img1.daumcdn.net/thumb/S95x77ht.u/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fnews%2F202106%2F15%2Fsegye%2F20210615200619838raai.jpg&amp;scode=media\"/>\n",
+            "<a class=\"link_thumb\" href=\"https://v.daum.net/v/20210709055007317\">\n",
+            "<img alt=\"&quot;성관계 민원 수백건&quot;..참다 못한 건물, '동성애자 출입금지' 붙였다\" aria-hidden=\"true\" class=\"thumb_g\" src=\"https://img1.daumcdn.net/thumb/S95x77ht.u/?fname=https%3A%2F%2Ft1.daumcdn.net%2Fnews%2F202107%2F09%2Fmoneytoday%2F20210709062900991lhgl.jpg&amp;scode=media\"/>\n",
             "</a>\n",
             "<div class=\"cont_thumb\">\n",
             "<strong class=\"tit_thumb\">\n",
-            "<a class=\"link_txt\" href=\"https://v.daum.net/v/20210615200619216\">이준석, 접종 모습도 화제.. 상의 탈의하며 \"국민에게 불쾌감 줘 민망\"</a>\n",
-            "<span class=\"info_news\">세계일보</span>\n",
+            "<a class=\"link_txt\" href=\"https://v.daum.net/v/20210709055007317\">\"성관계 민원 수백건\"..참다 못한 건물, '동성애자 출입금지' 붙였다</a>\n",
+            "<span class=\"info_news\">머니투데이</span>\n",
             "</strong>\n",
             "<div class=\"desc_thumb\">\n",
             "<span class=\"link_txt\">\n",
-            "                        민방위 대원인 이준석 국민의힘 대표가 15일 오전 서울 노원구의 한 병원에서 코로나19 얀센 백신을 접종하고 있다. 국회사진취재단  한국 헌정사 첫 30대 당수가 된 국...\n",
+            "                        #서울 종로구의 한 건물 지하 4~6층 화장실 입구에는 '동성애자 출입 신고로 화장실을 폐쇄한다'는 공고문이 붙어 있다. 지난 5월부터 1년  넘게 붙어 있는 이 공고문은...\n",
             "                    </span>\n",
             "</div>\n",
             "</div>\n",
@@ -320,66 +323,69 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IkwduFv29ai6",
-        "outputId": "0dfd00ef-97fe-407a-f5ff-ec1a51d81d4c"
+        "outputId": "8fb2d42e-438b-406c-d82a-2a8762062aa1"
       },
       "source": [
-        "#필요한 자료 만들기\n"
+        "#필요한 자료 만들기\n",
+        "for li in lis:\n",
+        "  title = li.select_one(\".cont_thumb > .tit_thumb > a\").text.replace('\"', '')\n",
+        "  print(title)"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "이준석, 접종 모습도 화제.. 상의 탈의하며 국민에게 불쾌감 줘 민망 : 세계일보\n",
-            "AZ 코로나 항체 치료제, 3상 시험서 유의미한 효과 못 거둬 : 연합뉴스\n",
-            "'건물 붕괴참사' 개입의혹 조폭출신 전 5·18단체 회장 해외도피(종합) : 연합뉴스\n",
-            "[영상]'목 안에서 튀어나온 입' 에일리언 물고기 정체는? : 헤럴드경제\n",
-            "물 좀 달라 외치다 숨진 청년, 어쩌다 41년만에 찾았나 : 오마이뉴스\n",
-            "전광훈 젖비린내 나는 이준석..민주·국민의힘 모두 해산 시켜야 : 아시아경제\n",
-            "14년 동안 8번 '무산'..보수·기독교 반대 이번엔 넘을까 : MBC\n",
-            "선글라스 낀 바이든에 발끈한 英 여왕은 안썼는데 : 서울신문\n",
-            "광복절부터 대체공휴일 된다는데..결국 공무원만 좋은 일? [이지효의 플러스 PICK] : 한국경제TV\n",
-            "[단독] '오피스텔 감금 살인' 피해 남성, 4월 실종 신고..친구 2명은 구속 : MBN\n",
-            "사적모임 8인, 식당·카페 영업 자정까지.. 7월부터 적용되나 : 한국일보\n",
-            "[단독] 눈뼈 부러지도록 버스기사 폭행..잡고 보니 수배자 : SBS\n",
-            "대체공휴일 전면확대..올해 4일 더 쉰다 : 한겨레\n",
-            "안철수 당명 바꿔 합당 기습제안..이준석 처음 듣는 얘기 : 한겨레\n",
-            "한국에 유수한 제약사 많다..美모더나 넘어 獨 큐어백도 위탁생산하나 : 조선비즈\n",
-            "네 친구 생리해?..지인 성관계 불발에 여친 폭행한 50대 : 이데일리\n",
-            "[제보영상] CCTV 확인했더니.. 배상도 안 된다는데, 너무 속상해요 : YTN\n",
-            "[단독] 이천시 공무원이 땅만 사면 '개발'..수상한 대박 : JTBC\n",
-            "북한도 이 정도론 안 미쳤다..탈북 유학생 美대학 비판 : 뉴시스\n",
-            "여성 고르는 유리방까지..모텔 개조해 불법 영업 : MBC\n",
-            "빚내서 이자 갚는 126만 명..하반기 금리마저 올리면? : MBC\n",
-            "1억써야 에르메스 버킨백 기회준다..명품큰손 한국 길들이는 에루샤 : 매일경제\n",
-            "광복절 금토일 연휴? 아니면 토일월?..여야 대체공휴일 경쟁 : 중앙일보\n",
-            "한국선 구경도 못하는데..中샤넬 진열대엔 '신상' 빼곡 직원들 바로 구매 가능합니다 : 매일경제\n",
-            "사타구니 사이로 장 빠져나오는 '소아 탈장' : 매일경제\n",
-            "[단독] 윤석열, 이달 말 '정치 참여' 선언 검토..사실상 대선 출정식 : JTBC\n",
-            "남아공 남동부 마을서 '다이아몬드 발견' 소동 : 연합뉴스\n",
-            "[주진우 라이브] 윤건영 G7 참가국 중 한 국가만 빼고 문 대통령에게 회담 제의..일본의 태도는 한마디로 속 좁은 정치 : KBS\n",
-            "모텔방 열자 女 선택하는 '미러방' 있었다 : 이데일리\n",
-            "동물 배터지게 먹지 않는 이유, 한국 과학자들이 찾았다 : 중앙일보\n",
-            "친부가 딸 성폭행·살해, 엄마가 은폐 英 뒤집은 엽기 재판 : 중앙일보\n",
-            "전광훈 젖비린내 이준석에 당하면 대한민국 끝나..민주·국힘 해산 : 뉴스1\n",
-            "[단독] 고발 이후 '김현미 연천 땅' 가보니..농지 정비한 모습 : JTBC\n",
-            "KTX 예약 해놨는데..AZ 백신 부족에 접종 취소 통보 속출 : 중앙일보\n",
-            "호주의 女 쌍둥이, 한 남자와 약혼.. 남편 공유하고 동시에 임신하기로 : 세계일보\n",
-            "G7서 고립 낯 가리는 日 스가, 존재감 없어..文과 비교 : 국민일보\n",
-            "롤렉스 있나요 VIP 아니면 나가세요..미국 매장서 '마상' 입은 까닭 : 매일경제\n",
-            "술 1~2잔이 심장보호? 1군 발암물질 국립암센터 원장 경고 : 중앙일보\n",
-            "여성이 나이 들수록 코 많이 고는 이유는? : 헬스조선\n",
-            "원룸에 가두고 굶겨 살해..잔인한 동창 2명 구속 : MBC\n",
-            "최민희, 이준석 '따릉이 출근'에 그냥 걸어라..서민 왜 화났나 : 중앙일보\n",
-            "샤넬백 사러 제주 원정쇼핑..혹시나 했는데 역시나 허탕 : 매일경제\n",
-            "자전거 타고 쫓아와 칼로 '푹'.. 뉴욕서 아시아계 또 당했다 : 조선일보\n",
-            "전 남편에 애인 생기자 분노..다섯 자녀 살해한 악마 엄마 : 중앙일보\n",
-            "[단독] 눈뼈 부러지도록 버스기사 폭행..잡고 보니 수배자 : SBS\n",
-            "[여기는 원주] 평창 주민 반발 격화..모든 경기 거부하겠다 : KBS\n",
-            "'^^ 이모티콘 붙인 문자로 집단해고..노원구 아파트 경비원들 복직 합의(종합) : 뉴시스\n",
-            "英시민권 박탈 IS 신부 난 멍청한 아이였다..고향가고 싶어요 : 서울신문\n",
-            "'얀센접종 후 사망' 30대 부검..당국 기저질환 유족 지병 완치 : 머니투데이\n",
-            "백신까지 맞았는데.. 이인영 통일장관, '방미' 돌연 취소 : 한국일보\n"
+            "성관계 민원 수백건..참다 못한 건물, '동성애자 출입금지' 붙였다\n",
+            "신규 확진 1300명 안팎 '사상 최다' 예상..오늘 '수도권 4단계' 발표할 듯\n",
+            "음료병에 술 숨겨..부끄러웠다 보건소 몰려든 2030 고백[르포]\n",
+            "검사입니다, 전화 끊으면 수배됩니다..바로 끊으세요\n",
+            "김부선 진중권, 아직 사랑 모르나..데이트 신청 거절해 이러나\n",
+            "'쥴리' '논문표절' 등 與의 윤석열 네거티브 안 먹히는 이유\n",
+            "10분도 안돼 취소했는데 숙박시설 피해 57% '온라인 플랫폼'서 발생\n",
+            "대통령 빼곤 다 나왔다, 박사만 184명인 강변 마을[한국의 명당]\n",
+            "[단독]['대권 주자' 윤석열 인터뷰]추미애와 동반사퇴 다양한 압박..문 대통령 뜻이었다고 봐야겠죠\n",
+            "도쿄 올림픽 결국 '무관중' 결정..스가 총리 '사면초가'\n",
+            "아이티 대통령 암살 용의자 6명 체포..1명은 미국 시민권자(종합)\n",
+            "트럼프, 퇴임후 본인시설서 '백악관 경호 숙박비' 6천만원 청구\n",
+            "'4차 대유행'으로 더 급해진 백신접종..13일부터 서울-경기 자율접종\n",
+            "[영상] 대낮에 달려들어 성추행한 50대男, 주저앉은 피해자 빤히 응시\n",
+            "'통합 대한항공' 새 옷값 대당 10억..비행기 도색 몰랐던 사실 [강갑생의 바퀴와 날개]\n",
+            "새벽 2시 술집 들어선 손님, 알고보니 방역단속 뜬 사복경찰\n",
+            "어머니에게 아파트 마련해줘라 아버지 유언에도 유산 혼자 차지한 큰형\n",
+            "이재명 바지 발언 지나쳤다..사과하며 덧붙인 한마디\n",
+            "치킨 먹고 또 때렸다..직원 12시간 폭행해 숨지게 한 대표, 징역 18년\n",
+            "[단독] 윤석열, 장모·아내 공격에 실소하더라..전혀 개의치 않아\n",
+            "아파트 경비원, 10월부터 택배보관 업무 가능..배달 등은 금지\n",
+            "조두순보다 더한 놈이 온다..'소녀 11명 성폭행' 김근식, 9월 출소\n",
+            "암살된 아이티 대통령 시신에 총알 12발..영부인은 고비 넘겨\n",
+            "'군복 비키니' 여성 NO, 미니스커트 남성 YES..젠더리스 패션은 이제 '숙명'\n",
+            "서울 거리두기 4단계 기준 충족..저녁약속 다 취소해야 하나\n",
+            "여자아이 머리, 교사가 부모 허락 없이 싹둑.. 美서 논란\n",
+            "윤석열 추미애와 함께 물러나면 징계 없다고 사퇴 압박\n",
+            "[단독] 토요일 밤부터 수도권 3인 모임 금지할 듯\n",
+            "'최다 기록' 하루 만에 깨질 듯..오늘 수도권 4단계 발표 예상\n",
+            "이 얼굴이 가짜라고?..사람 환장할 '가상 모델' 전세계 열풍\n",
+            "진중권 여, 노무현 죽음 더럽혀.. 대표는 송영길 아닌 김어준\n",
+            "[Mint] 순식간에 돈 빠져나간 코인 시장.. 2018년 이후 2번째 '크립토 윈터' 시작됐나\n",
+            "시간당 100mm 물폭탄..주말까지 차원 다른 소나기\n",
+            "돈 아끼려면 '현금' 써야 하는 과학적 이유\n",
+            "막 오른 'K스톱'.. 개미들 피해 우려\n",
+            "[영상] 삼성 역대급 가성비폰? 70만원대 최강 갤S21 유출\n",
+            "이낙연·이준석·이철희도 가세, 5년만에 또 '여가부 폐지' 싸움\n",
+            "'바나나맨' 암살범은 고도로 훈련받은 외국용병\n",
+            "벨기에대사 아내 또다시 폭행사건 연루..외무장관 지체없이 본국으로 돌아와야\n",
+            "美 중국이 못갖게 하라.. 반도체 패권 열쇠 쥔 이 회사\n",
+            "답답해서.. 이재명, '바지 발언' 사과하며 덧붙인 뼈있는 말\n",
+            "[단독] 김건희 또 다른 논문, 영문 초록 한 문장 뺀 94% 표절 의혹\n",
+            "'살찐 지도자' 부담됐나.. 살 뺀 김정은\n",
+            "빚내서, 적금 깨서.. 주식에 넣은 돈 49조 '역대 최대'\n",
+            "윤석열, '쥴리' 의혹에 집사람 술마시는 것 싫어해\n",
+            "윤석열 입은 오른쪽, 발은 왼쪽..정치권 둘 다 놓칠 수도\n",
+            "[르포] 2030 영끌해도 못 사..대출규제 풀자 중저가 아파트값↑\n",
+            "'셧다운' 현실로.. 10일부터 3명이상 못모일듯\n",
+            "日스가 문대통령 도쿄올림픽 참석 시 정중하게 대응\n",
+            "'金징어'는 끝, 오징어가 풍년입니다\n"
           ],
           "name": "stdout"
         }
@@ -422,6 +428,17 @@
       "source": [
         "https://news.daum.net/ranking/bestreply"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uN8Ur1_Envx-"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
