--- a/03_pandas_01_series.ipynb
+++ b/03_pandas_01_series.ipynb
@@ -1733,9 +1733,9 @@
       },
       "source": [
         "import pandas as pd\n",
-        "dt = {'국어국문학과':7,\t'중어중문학과':4,\t'일어일문학과':8,\t'영어영문학과':30,\t'불어불문학과':5,\t'독어독문학과':4,\t'노어노문학과':5,\t'한문학과':6,\t'언어정보학과':3,\t'사학과':7,\t'철학과':5,\t'고고학과':9}"
+        "dt = {'국어국문학과':7,\t'중어중문학과':4,\t'일어일문학과':8,\t'영어영문학과':30,\t'불어불문학과':5,\t'독어독문학과':4,\t'노어노문학과':5,\t'한문학과':6,\t'언어정보학과':3,\t'사학과':7,\t'철학과':5,\t'고고학과':9}\n"
       ],
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1745,14 +1745,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m6XTp1l4JEHr",
-        "outputId": "0cd0d68e-7f00-4f09-bd6f-f77c36b0b734"
+        "outputId": "b5c133c3-8baf-4ea5-8e21-5a528399af1e"
       },
       "source": [
         "# 학과 후보순위\n",
         "sdt = pd.Series(dt)\n",
         "print(sdt)"
       ],
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -1778,25 +1778,68 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ae1t8Q_vxQm9",
+        "outputId": "76f92534-3ddc-4cc9-9cd8-1bfa8afe7e14",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "dt = {}\n",
+        "while True:\n",
+        "  print(\"학과입력 =>\")\n",
+        "  s = input().strip()\n",
+        "  if s in sdt.index:\n",
+        "    print(s, \"추가 합격 순위 : 후보\", sdt[s])\n",
+        "  else:\n",
+        "    print(\"해당 학과는 존재하지 않습니다.\")\n",
+        "  print(\"종료하시겠습니까?(종료:y)\", end=\"\")\n",
+        "  s = input().strip()\n",
+        "  if (s == \"y\"): break"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "학과입력 =>\n",
+            "일어학과\n",
+            "해당 학과는 존재하지 않습니다.\n",
+            "종료하시겠습니까?(종료:y)n\n",
+            "학과입력 =>\n",
+            "일어일문학과\n",
+            "일어일문학과 추가 합격 순위 : 후보 8\n",
+            "종료하시겠습니까?(종료:y)y\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GupWYDqwJNbZ",
-        "outputId": "b61555f1-e4c4-4add-f074-c7236e7b58e6"
+        "outputId": "a8b401ec-1b3a-4be2-a2d2-28d779ac27a4"
       },
       "source": [
         "# 후보순위가 3번 이하인 학과와 후보순위가 20번 이상인 학과 조회\n",
         "\n",
-        "# 조건식\n",
-        "print(sdt[sdt.values <= 3].append(sdt[sdt.values >= 20]))"
+        "print(sdt[sdt.values <= 3].append(sdt[sdt.values >= 20]))\n",
+        "print(sdt[(sdt.values <= 3) | (sdt.values >= 20)])"
       ],
-      "execution_count": 6,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "언어정보학과     3\n",
             "영어영문학과    30\n",
+            "dtype: int64\n",
+            "영어영문학과    30\n",
+            "언어정보학과     3\n",
             "dtype: int64\n"
           ],
           "name": "stdout"
@@ -1810,12 +1853,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4629Y849zscy",
-        "outputId": "d403c2a8-0879-4d0c-a687-71b4913f0cbb"
+        "outputId": "4ce25073-6f77-4119-e984-231620756847"
       },
       "source": [
         " sdt[['언어정보학과']]"
       ],
-      "execution_count": 8,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1828,7 +1871,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 19
         }
       ]
     },
@@ -1839,12 +1882,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "h29SMwL3zvXD",
-        "outputId": "b6255ad8-1689-455e-ff2b-a3de6cf0faa8"
+        "outputId": "7863467f-3186-4db4-d168-972b55b16e94"
       },
       "source": [
         "sdt[['영어영문학과']]"
       ],
-      "execution_count": 10,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1857,7 +1900,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 20
         }
       ]
     },
@@ -1868,12 +1911,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L2KvDt6VKT4Z",
-        "outputId": "0be8cfab-b9ee-459f-f468-eebbdebd06c1"
+        "outputId": "1ebd78c7-3618-4df7-b587-3c9d56da7036"
       },
       "source": [
         " sdt[['언어정보학과', '영어영문학과']]"
       ],
-      "execution_count": 11,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1887,7 +1930,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 21
         }
       ]
     },
@@ -1898,13 +1941,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DSNGbBI2Kw_l",
-        "outputId": "5dc60c2e-0447-4a89-ecab-7ba7bbada5a1"
+        "outputId": "92edfa69-c753-4258-e054-b9b761dfaf80"
       },
       "source": [
         "#평균 추가 합격 순위\n",
         "int(sdt.mean())"
       ],
-      "execution_count": 12,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1916,7 +1959,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 22
         }
       ]
     },
@@ -1927,12 +1970,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IVaxfjTA0Unf",
-        "outputId": "418d7c46-7041-49ea-e834-ff393a7c02b7"
+        "outputId": "4940de1e-e867-41e7-ce24-ad8259b75dbf"
       },
       "source": [
         " sdt"
       ],
-      "execution_count": 13,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1956,7 +1999,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 23
         }
       ]
     },
@@ -1971,9 +2014,9 @@
       },
       "source": [
         "#학과 명칭대로 정렬\n",
-        "sdt.sort_index()"
+        "sdt = sdt.sort_index()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
